--- a/src/app/themes/volumio/header/volumio-header.scss
+++ b/src/app/themes/volumio/header/volumio-header.scss
@@ -5,7 +5,7 @@
   top: 0;
   width: 100%;
   height: $headerHeight;
-  background-color: $volumio-dark-opaque;
+  background-color: $volumio-black-trans-dark;
   button {
     font-size: 24px;
   }
